--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ img {display: block;}
 .page-nav__item:not(:first-child) {margin-left: 50px;} 
 
 .page-nav__link {
-  display: block;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -146,7 +147,6 @@ img {display: block;}
   padding-bottom: 200px;
 
   max-width: 1600px;
-  max-height: 600px;
   margin-right: auto;
   margin-left: auto;
 
@@ -210,9 +210,7 @@ img {display: block;}
   letter-spacing: 0.03em;
 }
 
-.key-positions {
-  display: flex;
-}
+.key-positions {display: flex;}
 
 .key-position__item {width: calc((100% - 3 * 30px) / 4); }
 
@@ -222,10 +220,12 @@ img {display: block;}
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 120px;
+  
   background-color: var(--bg-color-for-features);
   margin-bottom: 30px;
-  width: 270px;
-  height: 120px;
+  border-radius: 4px;
+
 }
 
 .key-position-title {
@@ -273,6 +273,9 @@ img {display: block;}
 .worker-list .worker-list__item:not(:first-child) {margin-left: 30px;}
 
 .worker-list__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 
@@ -289,7 +292,6 @@ img {display: block;}
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
 }
 
@@ -298,12 +300,12 @@ img {display: block;}
 
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
 }
 
-.social {display: flex;
-justify-content: center;}
+.social {
+  display: flex;
+  justify-content: center;}
 
 .social-item:not(:first-child) {margin-left: 10px;}
 
@@ -319,14 +321,12 @@ justify-content: center;}
   border: var(--accent-color);
 }
 
-.social-item__icon {
-  fill: currentColor;
-}
+.social-item__icon {fill: currentColor;}
 
 .social-item-link:hover,
 .social-item-link:focus {
-color: var(--primary-white-color);  
-background-color: var(--accent-color);
+  color: var(--primary-white-color);  
+  background-color: var(--accent-color);
 }
 
 
@@ -353,18 +353,13 @@ background-color: var(--accent-color);
   color: var(--social-buttons-color);
 }
 
-.icon-logo {
-  fill: currentColor;
-}
+.icon-logo {fill: currentColor;}
 
 .partner__item:hover,
 .partner__item:focus {
   color: var(--accent-color);  
-  /* background-color: var(--accent-color); */
   border: 1px solid var(--accent-color);
-
-  }
-
+}
 
 
 /* СЕКЦІЯ ФУТЕР */
@@ -383,7 +378,7 @@ background-color: var(--accent-color);
 .logo-inverse {color: var(--primary-white-color);}
 
 .footer-item .logo {
-  display: inline-block;
+  display: flex;
   margin-bottom: 20px;
 }
 
@@ -448,6 +443,7 @@ background-color: var(--accent-color);
 
 /* ПОРТФОЛІО */
 
+
 /* СЕКЦІЯ КНОПКИ ФІЛЬТРУ ПОРТФОЛІО*/
 
 .filter {
@@ -480,7 +476,8 @@ background-color: var(--accent-color);
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
- 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  0px 1px 2px 0px rgba(0, 0, 0, 0.08),
+  0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -509,9 +506,9 @@ background-color: var(--accent-color);
   }
  */
 
-  .project__item:not(:nth-child(3n)) {margin-right: 30px;}
+.project__item:not(:nth-child(3n)) {margin-right: 30px;}
 
-  .project__item:not(:nth-last-child(-n+3)) {margin-bottom: 30px;}
+.project__item:not(:nth-last-child(-n+3)) {margin-bottom: 30px;}
 
 
 .project__label {
