--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,10 @@ img {display: block;}
   background-color: var(--bg-grey-color);
 }
 
-.footer-box {display: flex;}
+.footer-box {
+  display: flex;
+align-items: baseline;
+}
 
 .footer-item:not(:first-child) {margin-left: 70px;}
 
@@ -404,8 +407,7 @@ img {display: block;}
 .footer-contacts:not(:last-child) {margin-bottom: 9px;}
 
 .join-label {
-  display: inline-block;
-  margin-top: 12px;
+  margin-bottom: 20px;
   color: var(--primary-white-color);
   font-weight: 700;
   font-size: 14px;
@@ -472,7 +474,8 @@ background-color: var(--accent-color);
   cursor: pointer;
 }
 
-.filter-list-button:hover {
+.filter-list-button:hover,
+.filter-list-button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
@@ -488,23 +491,19 @@ background-color: var(--accent-color);
   flex-wrap: wrap;
 }
 
-.project__item {
-  width: calc((100% - 2 * 30px) / 3);
+.project__item {width: calc((100% - 2 * 30px) / 3);}
+
+.project-item-link {
+display: inline-block;
 }
-.project__item:hover {
+
+
+.project-item-link:hover,
+.project-item-link:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
  0px 4px 4px 0px rgba(0, 0, 0, 0.06),
  0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
-
-/* Перший варіант виконання оформлення кожен третій елемет та останні 3 елементи */
-/* .project__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
-} */
-/* .project__item:nth-child(3n) {
-  margin-right: 0;
-  }
- */
 
 .project__item:not(:nth-child(3n)) {margin-right: 30px;}
 
@@ -524,14 +523,13 @@ background-color: var(--accent-color);
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
 }
 
 .project__description {
   padding: 20px 24px;
 
-  border-radius: 1px solid ;
+  border-radius: 1px solid var(--color-border-project-item);
   border-left: 1px solid var(--color-border-project-item);
   border-right: 1px solid var(--color-border-project-item);
   border-bottom: 1px solid var(--color-border-project-item);
